
Removed functionalities

Bugs fixed
* Countries in setup.pl from Locale::CLDR; use reference data instead (#7648)
* Correctness of HTML pages, now includes 'html' closing tag (#7784)

Cleanup & architecture improvements
* Reference data factored out of database schema (#7648)
* Removed global state LedgerSMB::App_State::User (#7876)
* Moved Order/Quote state into separate process (#7908)


Changelog for 1.11 Series
Released 2023-10-03

Changelog for 1.11.8
* Fix changing Taxform checkmark after posting AR/AP transactions (#7894)
* Restore customer/vendor name on PNL drilldown after GL column change (#7895)
* Fix formatting of amounts on AR/AP search results (#7896)
* Fix import of CoA csv with non-empty 'links' field (#7912)
* Explicitly set foreground color on dark backgrounds in blue theme (#7875)
* Fix screens, e.g. contacts, impacted by rename of 'action' parameter (#7918)


Changelog for 1.11.7
* Fix creating an invoice from an order (#7855)
* Retain partsgroup selection on Update in parts screen (#7848)
* Fix missing columns on trial balance 'Ending' report type (#7870)


Changelog for 1.11.6
* Fix 'Current earnings' not showing in the balance sheet report (#7785)
* Fix saving headings of headings (#7802)
* Fix saving unused accounts configured for reconciliation (#7805)
* Fix 'delete' link shown in CoA screen on accounts used with parts (#7812)
* Fix deletion of parts (#7811)


Changelog for 1.11.5
* Load paper size from database settings, if set (#7738)
* Fix CoA and Trial Balance PDF reports missing data in some columns (#7739)
* Fix check printing when paying a subset of the available invoices (#7761)
* Add missing AR/AP workflow context creation in 1.10->1.11 migration (#7765)
* Show workflow based AR/AP transaction history, same as on invoices (#7774)
* Fix approval of payment/receipt batches (#7771)


Changelog for 1.11.4
* Show database and user name in setup.pl consistency result screen (#7714)
* Fix AR/AP transaction Reverse button (#7719, #7717)